; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/utils/extr_ConvertUTF.c_ConvertUTF8toUTF32.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/utils/extr_ConvertUTF.c_ConvertUTF8toUTF32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conversionOK = common dso_local global i32 0, align 4
@trailingBytesForUTF8 = common dso_local global i16* null, align 8
@sourceExhausted = common dso_local global i32 0, align 4
@sourceIllegal = common dso_local global i32 0, align 4
@offsetsFromUTF8 = common dso_local global i32* null, align 8
@targetExhausted = common dso_local global i32 0, align 4
@UNI_MAX_LEGAL_UTF32 = common dso_local global i32 0, align 4
@UNI_SUR_HIGH_START = common dso_local global i32 0, align 4
@UNI_SUR_LOW_END = common dso_local global i32 0, align 4
@strictConversion = common dso_local global i64 0, align 8
@UNI_REPLACEMENT_CHAR = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ConvertUTF8toUTF32(i64** %0, i64* %1, i32** %2, i32* %3, i64 %4) #0 {
  %6 = alloca i64**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i16, align 2
  store i64** %0, i64*** %6, align 8
  store i64* %1, i64** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i64 %4, i64* %10, align 8
  %16 = load i32, i32* @conversionOK, align 4
  store i32 %16, i32* %11, align 4
  %17 = load i64**, i64*** %6, align 8
  %18 = load i64*, i64** %17, align 8
  store i64* %18, i64** %12, align 8
  %19 = load i32**, i32*** %8, align 8
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %13, align 8
  br label %21

21:                                               ; preds = %173, %5
  %22 = load i64*, i64** %12, align 8
  %23 = load i64*, i64** %7, align 8
  %24 = icmp ult i64* %22, %23
  br i1 %24, label %25, label %174

25:                                               ; preds = %21
  store i32 0, i32* %14, align 4
  %26 = load i16*, i16** @trailingBytesForUTF8, align 8
  %27 = load i64*, i64** %12, align 8
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds i16, i16* %26, i64 %28
  %30 = load i16, i16* %29, align 2
  store i16 %30, i16* %15, align 2
  %31 = load i64*, i64** %12, align 8
  %32 = load i16, i16* %15, align 2
  %33 = zext i16 %32 to i32
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i64, i64* %31, i64 %34
  %36 = load i64*, i64** %7, align 8
  %37 = icmp uge i64* %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %25
  %39 = load i32, i32* @sourceExhausted, align 4
  store i32 %39, i32* %11, align 4
  br label %174

40:                                               ; preds = %25
  %41 = load i64*, i64** %12, align 8
  %42 = load i16, i16* %15, align 2
  %43 = zext i16 %42 to i32
  %44 = add nsw i32 %43, 1
  %45 = trunc i32 %44 to i16
  %46 = call i32 @isLegalUTF8(i64* %41, i16 zeroext %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %50, label %48

48:                                               ; preds = %40
  %49 = load i32, i32* @sourceIllegal, align 4
  store i32 %49, i32* %11, align 4
  br label %174

50:                                               ; preds = %40
  %51 = load i16, i16* %15, align 2
  %52 = zext i16 %51 to i32
  switch i32 %52, label %111 [
    i32 5, label %53
    i32 4, label %63
    i32 3, label %73
    i32 2, label %83
    i32 1, label %93
    i32 0, label %103
  ]

53:                                               ; preds = %50
  %54 = load i64*, i64** %12, align 8
  %55 = getelementptr inbounds i64, i64* %54, i32 1
  store i64* %55, i64** %12, align 8
  %56 = load i64, i64* %54, align 8
  %57 = load i32, i32* %14, align 4
  %58 = sext i32 %57 to i64
  %59 = add i64 %58, %56
  %60 = trunc i64 %59 to i32
  store i32 %60, i32* %14, align 4
  %61 = load i32, i32* %14, align 4
  %62 = shl i32 %61, 6
  store i32 %62, i32* %14, align 4
  br label %63

63:                                               ; preds = %50, %53
  %64 = load i64*, i64** %12, align 8
  %65 = getelementptr inbounds i64, i64* %64, i32 1
  store i64* %65, i64** %12, align 8
  %66 = load i64, i64* %64, align 8
  %67 = load i32, i32* %14, align 4
  %68 = sext i32 %67 to i64
  %69 = add i64 %68, %66
  %70 = trunc i64 %69 to i32
  store i32 %70, i32* %14, align 4
  %71 = load i32, i32* %14, align 4
  %72 = shl i32 %71, 6
  store i32 %72, i32* %14, align 4
  br label %73

73:                                               ; preds = %50, %63
  %74 = load i64*, i64** %12, align 8
  %75 = getelementptr inbounds i64, i64* %74, i32 1
  store i64* %75, i64** %12, align 8
  %76 = load i64, i64* %74, align 8
  %77 = load i32, i32* %14, align 4
  %78 = sext i32 %77 to i64
  %79 = add i64 %78, %76
  %80 = trunc i64 %79 to i32
  store i32 %80, i32* %14, align 4
  %81 = load i32, i32* %14, align 4
  %82 = shl i32 %81, 6
  store i32 %82, i32* %14, align 4
  br label %83

83:                                               ; preds = %50, %73
  %84 = load i64*, i64** %12, align 8
  %85 = getelementptr inbounds i64, i64* %84, i32 1
  store i64* %85, i64** %12, align 8
  %86 = load i64, i64* %84, align 8
  %87 = load i32, i32* %14, align 4
  %88 = sext i32 %87 to i64
  %89 = add i64 %88, %86
  %90 = trunc i64 %89 to i32
  store i32 %90, i32* %14, align 4
  %91 = load i32, i32* %14, align 4
  %92 = shl i32 %91, 6
  store i32 %92, i32* %14, align 4
  br label %93

93:                                               ; preds = %50, %83
  %94 = load i64*, i64** %12, align 8
  %95 = getelementptr inbounds i64, i64* %94, i32 1
  store i64* %95, i64** %12, align 8
  %96 = load i64, i64* %94, align 8
  %97 = load i32, i32* %14, align 4
  %98 = sext i32 %97 to i64
  %99 = add i64 %98, %96
  %100 = trunc i64 %99 to i32
  store i32 %100, i32* %14, align 4
  %101 = load i32, i32* %14, align 4
  %102 = shl i32 %101, 6
  store i32 %102, i32* %14, align 4
  br label %103

103:                                              ; preds = %50, %93
  %104 = load i64*, i64** %12, align 8
  %105 = getelementptr inbounds i64, i64* %104, i32 1
  store i64* %105, i64** %12, align 8
  %106 = load i64, i64* %104, align 8
  %107 = load i32, i32* %14, align 4
  %108 = sext i32 %107 to i64
  %109 = add i64 %108, %106
  %110 = trunc i64 %109 to i32
  store i32 %110, i32* %14, align 4
  br label %111

111:                                              ; preds = %103, %50
  %112 = load i32*, i32** @offsetsFromUTF8, align 8
  %113 = load i16, i16* %15, align 2
  %114 = zext i16 %113 to i64
  %115 = getelementptr inbounds i32, i32* %112, i64 %114
  %116 = load i32, i32* %115, align 4
  %117 = load i32, i32* %14, align 4
  %118 = sub nsw i32 %117, %116
  store i32 %118, i32* %14, align 4
  %119 = load i32*, i32** %13, align 8
  %120 = load i32*, i32** %9, align 8
  %121 = icmp uge i32* %119, %120
  br i1 %121, label %122, label %131

122:                                              ; preds = %111
  %123 = load i16, i16* %15, align 2
  %124 = zext i16 %123 to i32
  %125 = add nsw i32 %124, 1
  %126 = load i64*, i64** %12, align 8
  %127 = sext i32 %125 to i64
  %128 = sub i64 0, %127
  %129 = getelementptr inbounds i64, i64* %126, i64 %128
  store i64* %129, i64** %12, align 8
  %130 = load i32, i32* @targetExhausted, align 4
  store i32 %130, i32* %11, align 4
  br label %174

131:                                              ; preds = %111
  %132 = load i32, i32* %14, align 4
  %133 = load i32, i32* @UNI_MAX_LEGAL_UTF32, align 4
  %134 = icmp sle i32 %132, %133
  br i1 %134, label %135, label %167

135:                                              ; preds = %131
  %136 = load i32, i32* %14, align 4
  %137 = load i32, i32* @UNI_SUR_HIGH_START, align 4
  %138 = icmp sge i32 %136, %137
  br i1 %138, label %139, label %162

139:                                              ; preds = %135
  %140 = load i32, i32* %14, align 4
  %141 = load i32, i32* @UNI_SUR_LOW_END, align 4
  %142 = icmp sle i32 %140, %141
  br i1 %142, label %143, label %162

143:                                              ; preds = %139
  %144 = load i64, i64* %10, align 8
  %145 = load i64, i64* @strictConversion, align 8
  %146 = icmp eq i64 %144, %145
  br i1 %146, label %147, label %156

147:                                              ; preds = %143
  %148 = load i16, i16* %15, align 2
  %149 = zext i16 %148 to i32
  %150 = add nsw i32 %149, 1
  %151 = load i64*, i64** %12, align 8
  %152 = sext i32 %150 to i64
  %153 = sub i64 0, %152
  %154 = getelementptr inbounds i64, i64* %151, i64 %153
  store i64* %154, i64** %12, align 8
  %155 = load i32, i32* @sourceIllegal, align 4
  store i32 %155, i32* %11, align 4
  br label %174

156:                                              ; preds = %143
  %157 = load i8*, i8** @UNI_REPLACEMENT_CHAR, align 8
  %158 = ptrtoint i8* %157 to i32
  %159 = load i32*, i32** %13, align 8
  %160 = getelementptr inbounds i32, i32* %159, i32 1
  store i32* %160, i32** %13, align 8
  store i32 %158, i32* %159, align 4
  br label %161

161:                                              ; preds = %156
  br label %166

162:                                              ; preds = %139, %135
  %163 = load i32, i32* %14, align 4
  %164 = load i32*, i32** %13, align 8
  %165 = getelementptr inbounds i32, i32* %164, i32 1
  store i32* %165, i32** %13, align 8
  store i32 %163, i32* %164, align 4
  br label %166

166:                                              ; preds = %162, %161
  br label %173

167:                                              ; preds = %131
  %168 = load i32, i32* @sourceIllegal, align 4
  store i32 %168, i32* %11, align 4
  %169 = load i8*, i8** @UNI_REPLACEMENT_CHAR, align 8
  %170 = ptrtoint i8* %169 to i32
  %171 = load i32*, i32** %13, align 8
  %172 = getelementptr inbounds i32, i32* %171, i32 1
  store i32* %172, i32** %13, align 8
  store i32 %170, i32* %171, align 4
  br label %173

173:                                              ; preds = %167, %166
  br label %21

174:                                              ; preds = %147, %122, %48, %38, %21
  %175 = load i64*, i64** %12, align 8
  %176 = load i64**, i64*** %6, align 8
  store i64* %175, i64** %176, align 8
  %177 = load i32*, i32** %13, align 8
  %178 = load i32**, i32*** %8, align 8
  store i32* %177, i32** %178, align 8
  %179 = load i32, i32* %11, align 4
  ret i32 %179
}

declare dso_local i32 @isLegalUTF8(i64*, i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
